--- a/finite.tex
+++ b/finite.tex
@@ -685,7 +685,7 @@ It's worth pointing out how strange all of this is. In Euclidean geometry, open 
 \end{remark}
 
 \begin{remark}
-The results of this section have several alternative forms in the literature.  For instance, \([p]_\phi(x)\) can also be expressed as \[[p]_\phi(x) = px + v_1 x^p + v_2 x^{p^2} + \cdots + v_d x^{p^d} + \cdots,\] where the sum is \emph{not} taken with respect to the group law, and this also determines a presentation of \(\sheaf O_{\moduli{fgl}^{\ptyp}}\).  These other elements \(v_d\), called \textit{Hazewinkel coordinates}, differ substantially from the Kudo--Araki coordinates favored here, although they are equally ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.\footnote{In particular, it is a largely open question whether there is a (partial) coordinate patch that is compatible with the results of \Cref{PowerOpnsSection}, though there are partial results along these lines~\cite{JohnsonNoel,LawsonSecondaryPowerOps,LawsonNaumann,StricklandProductsOnModules}.}\footnote{An unusual set of canonical generators is discussed in~\cite[Section V.10]{LazardCFGs}.}
+The results of this section have several alternative forms in the literature.  For instance, there is a second set of coordinates \(v_d\), called the \textit{Hazewinkel generators}, which differ substantially from the Kudo--Araki coordinates favored here though they are just as ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.\footnote{In particular, it is a largely open question whether there is a (partial) coordinate patch that is compatible with the results of \Cref{PowerOpnsSection}, though there are partial results along these lines~\cite{JohnsonNoel,LawsonSecondaryPowerOps,LawsonNaumann,StricklandProductsOnModules}.}\footnote{An unusual set of canonical generators is discussed in~\cite[Section V.10]{LazardCFGs}.}
 \end{remark}
 
 \begin{remark}[{\cite[Section IV.9]{LazardCFGs}, \cite[Section 17.5]{Hazewinkel}}]\label{ArtinHasseExponential}
