--- a/finite.tex
+++ b/finite.tex
@@ -717,7 +717,7 @@ In the previous two Lectures, we analyzed the structure of \(\moduli{fg}\) as a 
 Let \(\bar k\) be an algebraically closed field of positive characteristic \(p\).  The height map \[\height\co \pi_0 \moduli{fg}(\bar k) \to \N_{> 0} \cup \{\infty\}\] is a bijection.
 \end{theorem}
 \begin{proof}
-Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \index{formal group!Honda group!law}\textit{\(d\){\th} Honda formal group law} is the \(p\)--typical formal group law over \(k\) determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for \(d\).  To show injectivity, we must show that every \(p\)--typical formal group law \(\phi\) over \(\bar k\) is isomorphic to the appropriate Honda group law.  Suppose that the \(p\)--series for \(\phi\) begins \[[p]_\phi(x) = x^{p^d} +_\phi a x^{p^{d+k}} + \cdots.\]  Then, we will construct a coordinate transformation \(g(x) = \sumphi_{j=0}^\infty b_j x^{p^j}\) satisfying
+Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \index{formal group!Honda group!law}\textit{\(d\){\th} Honda formal group law} is the \(p\)--typical formal group law over \(k\) determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for \(d\).  To show injectivity, we must show that every \(p\)--typical formal group law \(\phi\) over \(\bar k\) is isomorphic to the appropriate Honda group law.  Suppose that the \(p\)--series for \(\phi\) begins \[[p]_\phi(x) = u x^{p^d} +_\phi a x^{p^{d+k}} + \cdots\] for a unit \(u\).  By replacing \(x\) with \(u^{-1/p^d} x\), we may assume that \(u = 1\).  Then, we will construct a coordinate transformation \(g(x) = \sumphi_{j=0}^\infty b_j x^{p^j}\) satisfying
 \begin{align*}
 g(x^{p^d}) & \equiv [p]_\phi(g(x)) & \pmod{x^{p^{d+k} + 1}} \\
 \sumphi_{j=0}^\infty b_j x^{p^{d+j}} & \equiv \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^d} +_\phi a \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^{d+k}} & \pmod{x^{p^{d+k} + 1}} \\
