add footnote about when we employ gradings

--- a/mo.tex
+++ b/mo.tex
@@ -419,7 +419,7 @@ x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
 Applying \Cref{GradedAndGmEquivAgree} thus selects the original degree \(n\) classes.
 \end{proof}
 
-Early on in this discussion, trading the language ``graded map'' for ``\(\Gm\)--equivariant map'' did not seem to have much of an effect on our mathematics---so little, in fact, that we will freely move between the graded homotopy groups of a spectrum and the \(0\){\th} homotopy group of a periodic spectrum throughout the rest of this book.  The thrust of this Lemma, however, is that ``Steenrod--equivariant map'' already includes ``\(\Gm\)--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series \(\lambda^*(x)\) embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the \(H\)--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} \(\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)\).
+Early on in this discussion, trading the language ``graded map'' for ``\(\Gm\)--equivariant map'' did not seem to have much of an effect on our mathematics---so little, in fact, that we will freely move between the graded homotopy groups of a spectrum and the \(0\){\th} homotopy group of a periodic spectrum throughout the rest of this book.\footnote{Generally speaking, certain \emph{computations} are expressed most comfortably for an algebraic topologist in terms of graded objects, but we will endeavor to express the surrounding \emph{theory} in the language of equivariance.}  The thrust of this Lemma, however, is that ``Steenrod--equivariant map'' already includes ``\(\Gm\)--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series \(\lambda^*(x)\) embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the \(H\)--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} \(\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)\).
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
 The series \(\lambda(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j\) is the universal example of a series satisfying \(\lambda(x_1 + x_2) = \lambda(x_1) + \lambda(x_2)\).  Points \(f \in (\Spec \mathcal AP_0)(T)\) biject with those power series \(\lambda_f\) with coefficients in the \(\F_2\)--algebra \(T\) satisfying \[\lambda_f(x_1 + x_2) = \lambda_f(x_1) + \lambda_f(x_2).\]
@@ -470,7 +470,7 @@ from which we can extract formulas like
 Our interest in \(\colim_n \HFtwo P^0 \RP^n\) is the culmination of quite a lot of definitions in basic algebraic topology, quietly lurking in the background.  For instance, infinite CW-complexes are \emph{defined} to have the weak topology coming from their skeleta, so that a continuous map off of such an infinite complex is continuous if and only if it is the colimit of a compatible system of maps.  The cohomology of an infinite complex comes with a Milnor sequence, and if we arrange the situation so as not to encounter a \(\lim^1\) term, it is exactly equal to the limit of the cohomology groups of the finite stages---but because all maps between complexes filter through the finite stages, all the induced maps on cohomology are necessarily continuous for the adic topology.  This is exactly the phenomenon we are capturing (or, indeed, enforcing in algebra) when we track the system of finite schemes \(\{\RP^n_{\HFtwo P}\}_{n=0}^\infty\).
 \end{remark}
 
-In summary, the formula \(\RP^\infty_{\HFtwo P} \cong \G_a\) is meant to point out that this language of formal schemes has an extremely good compression ratio---you can fit a lot of information into a very tiny space.  This formula simultaneously encodes the cohomology ring of \(\RP^\infty\) as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with \(\InternalAut{\G_a}\).  As a separate wonder, it is also remarkable that the single cohomological calculation \(\RP^\infty_{\HFtwo P}\) exerts such enormous control over mod--\(2\) cohomology itself (e.g., the entire structure of the dual Steenrod algebra).  We will eventually give a concrete reason for this in \Cref{UnstableContextsSection}, but it will also turn out to be a surprisingly common occurrence even in many situations where such a direct link is not available---this is, already, one of the mysteries of the subject.
+In summary, the formula \(\RP^\infty_{\HFtwo P} \cong \G_a\) embodies the extremely good compression ratio of this approach: it simultaneously encodes the cohomology ring of \(\RP^\infty\) as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with \(\InternalAut{\G_a}\).  As a separate wonder, it is also remarkable that the single cohomological calculation \(\RP^\infty_{\HFtwo P}\) exerts such enormous control over mod--\(2\) cohomology itself (e.g., the entire structure of the dual Steenrod algebra).  We will eventually give a concrete reason for this in \Cref{UnstableContextsSection}, but it will also turn out to be a surprisingly common occurrence even in many situations where such a direct link is not available.  This is, already, one of the mysteries of the subject.
 
 
 
